--- a/foot/build.gradle
+++ b/foot/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1
 	implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	implementation("org.springframework.boot:spring-boot-starter-security:3.4.2")
 	
 	
 }
@@ -37,3 +40,5 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
