--- a/foot/src/main/resources/application.properties
+++ b/foot/src/main/resources/application.properties
@@ -1,11 +1,31 @@
 spring.application.name=foot
-
+spring.profiles.include=external
 # Mysql.main
 #spring.datasource.mysql.main.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.mysql.main.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.mysql.main.jdbc-url=jdbc:mysql://localhost:3306/hand?zeroDateTimeBehavior=convertToNull
-spring.datasource.mysql.main.username=root
-spring.datasource.mysql.main.password=asd475881@
+spring.datasource.mysql.main.username=${mysql_main_username}
+spring.datasource.mysql.main.password=${mysql_main_password}
 
 spring.datasource.mysql.main.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.mysql.main.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/hand?zeroDateTimeBehavior=convertToNull
+spring.datasource.mysql.main.jdbc-url=${mysql_main_jdbc_url}
+
+
+# Google SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rr1hhh1fff1@gmail.com
+spring.mail.password=dpyvxhgptyumkhnn
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.mime.charset=UTF-8
+
+
+#S3
+cloud.aws.region.static=${cloud_aws_region}
+cloud.aws.s3.bucket=${cloud_aws_bucket}
+cloud.aws.credentials.access-key=${cloud_aws_credentials_access_key}
+cloud.aws.credentials.secret-key=${cloud_aws_credentials_secret_access_key}
+cloud.aws.region.auto=false
+cloud.aws.stack.auto=false
