--- a/foot/src/main/resources/application-external.properties
+++ b/foot/src/main/resources/application-external.properties
@@ -6,6 +6,6 @@ mysql_main_password=asd475881@
 
 
 cloud_aws_region=ap-northeast-2
-cloud.aws.s3.bucket=vvvvvvvvvvvvv-vvvvvvvvvv
-cloud.aws.credentials.access-key=AKIA5SRYAXDZPNGDPUFN
-cloud.aws.credentials.secret-key=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
+cloud_aws_bucket=vvvvvvvvvvvvv-vvvvvvvvvv
+cloud_aws_credentials_access_key=AKIA5SRYAXDZPNGDPUFN
+cloud_aws_credentials_secret_key=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
