갠프 토스 결제 구현 해야됨 그냥 뛰우기만 함

--- a/foot/src/main/resources/application.properties
+++ b/foot/src/main/resources/application.properties
@@ -29,3 +29,9 @@ cloud.aws.credentials.access-key=${cloud_aws_credentials_access_key}
 cloud.aws.credentials.secret-key=${cloud_aws_credentials_secret_key}
 cloud.aws.region.auto=false	       
 cloud.aws.stack.auto=false
+
+
+#toos 
+toss:
+  client-key: ${TOSS_CLIENT_KEY}
+  secret-key: ${TOSS_SECRET_KEY}
