--- a/foot/src/main/resources/application-external.properties
+++ b/foot/src/main/resources/application-external.properties
@@ -1,7 +1,7 @@
-mysql_main_jdbc_url=jdbc:log4jdbc:mysql://localhost:3306/hand?zeroDateTimeBehavior=convertToNull
+mysql_main_jdbc_url=jdbc:log4jdbc:mysql://roottt.c50miecy29z9.ap-northeast-2.rds.amazonaws.com/hand?zeroDateTimeBehavior=convertToNull
 
-mysql_main_username=root
-mysql_main_password=asd475881@
+mysql_main_username=admin
+mysql_main_password=asd475881
 
 
 
