소셜매칭 에약하기 했을떄 결제 건너뛰고 완료

--- a/foot/build.gradle
+++ b/foot/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws
 	implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
 	
+		// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
+	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
+	
 	
 }
 
