--- a/foot/src/main/resources/application.properties
+++ b/foot/src/main/resources/application.properties
@@ -36,3 +36,8 @@ cloud.aws.stack.auto=false
 toss:
   client-key: ${TOSS_CLIENT_KEY}
   secret-key: ${TOSS_SECRET_KEY}
+  
+  
+ kakao:
+  rest-api-key: a5982d6b093aee584cae780bf09f4515
+  redirect-uri: http://localhost:8080/auth/kakao/callback
